--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <h1>Saad.Exe</h1>
       <p>I'm a <span class="typed" data-typed-items="Gamer,Discord Major,Chill Guy"></span></p>
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/Zapnai" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/daimon_gaming69/" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -73,7 +73,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Howdy,The name's Saad,Saad Gul I'm well known for my interest in Competitve Gaming and Competitveness in General,My Lads do Complain about my Toxicity and Uncontrollable rage, But i defend myself by the Old fashioned Argument Collapser "Im'a Gamer what'd you except".I belong from the Proud Lands of Pakistan clocking in my Origins from Peshawar yet i can't Speak Proper Hindco or Pashto, though it's been a delightful experience having a one-sided Conversation with you! </p>
         </div>
 
         <div class="row">
@@ -82,8 +82,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Below are Some Quick Facts about me!
             </p>
             
      ><!-- End About Section -->
@@ -94,7 +93,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Was Born in Islamabad,His Dad was born in Jackabad,His Grandfather was born in Quetta,His Grandfathers father was born in Peshawar<br>All rounder Pakistani<br>Gamer<br>Born in 9 june 2010</p>
         </div>
 
        
@@ -104,7 +103,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row skills-content">
@@ -187,3 +186,4 @@
 </body>
 
 </html>
+  
